Bug 629587. Don't try to scroll based on scrollbar attributes if they represent the current scroll position. r=roc a=blocking